# doc2markdown

./: README.md  pyproject.toml  requirements.txt
scripts/: debug_convert.py
src/: server.py
src/doc2markdown/: convert_cli.py  deepseek_v2_ocr.py  server.py
tests/: test_deepseek_ocr.py  test_server.py
tests/fixtures/: README.md
