[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc2markdown-mcp"
version = "0.2.0"
description = "MCP server for converting documents to Markdown format"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jia Liu" }
]
keywords = ["mcp", "markdown", "document", "conversion", "docx", "pdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "markitdown[all]>=0.1.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
# Aligned with DeepSeek-OCR-2 upstream (transformers path; vLLM/flash-attn are optional).
deepseek-ocr2 = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "tqdm>=4.0.0",
    "pymupdf>=1.24.0",
    "transformers==4.46.3",
    "tokenizers==0.20.3",
    "addict>=2.4.0",
    "easydict>=1.10",
    "matplotlib>=3.7.0",
    "einops>=0.7.0",
    "Pillow>=9.0.0",
    "img2pdf>=0.5.0",
]

[project.scripts]
doc2markdown = "doc2markdown.server:main"
doc2markdown-convert = "doc2markdown.convert_cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/doc2markdown"
Repository = "https://github.com/yourusername/doc2markdown"

[tool.hatch.build.targets.wheel]
packages = ["src/doc2markdown"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: marks tests that run real model-based OCR on fixture PDFs (deselect with '-m \"not integration\"')",
]

